<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"

        android:paddingBottom="5dp"
        android:text="@string/login_title"
        android:textSize="24sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:orientation="horizontal"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"
        android:padding="5dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="2dp"
            android:paddingRight="2dp"
            android:src="@drawable/login_activity_account_name"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/accountName"/>

        <EditText
            android:id="@+id/id_et_login_accountName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/accountName_hint"
            android:singleLine="true"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="5dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="2dp"
            android:paddingRight="2dp"
            android:src="@drawable/login_activity_password"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"/>

        <EditText
            android:id="@+id/id_et_login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:singleLine="true"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp">


        <Button
            android:id="@+id/id_but_login_finish"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="#fff"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:background="@drawable/login_and_register_activity_but_click"
            android:text="@string/finish"/>

        <TextView
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:background="#eeeeee"/>

        <Button
            android:id="@+id/id_but_want_register"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="#fff"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/login_and_register_activity_but_click"
            android:text="@string/login_want_register"/>
    </LinearLayout>

    <!--<Button-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:id="@+id/id_but_forget_password"-->
        <!--android:text="跳过"/>-->

</LinearLayout>